--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
 	<title>Gradient Bakground</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-<body id="gradient">
-	<h1>Background Generator</h1>
-	<input class="color1" type="color" name="color1" value="#00ff00">
-	<input class="color2" type="color" name="color2" value="#ff0000">
-	<h2>Current CSS Background</h2>
-	<button id="random">random generator</button>
-	<h3></h3>
+<body id="gradient">	
+	<div class="container">
+		<h1>Background Generator</h1>
+
+		<input class="color1" type="color" name="color1" value="#00ff00">
+		<input class="color2" type="color" name="color2" value="#ff0000">
+		<h2>Current CSS Background</h2>
+		<button id="random">random generator</button>
+
+		<div id="result">
+			<h2>Color Code</h2>
+			<h3></h3>
+		</div>
+		
+	</div>
+	
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
